--- a/limehd/res/xml/lime_hsu_shift.xml
+++ b/limehd/res/xml/lime_hsu_shift.xml
@@ -45,41 +45,43 @@
     
     <Row>
         <Key limehd:codes="81" limehd:keyLabel="Q" limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="87" limehd:keyLabel="W"/>
-        <Key limehd:codes="69" limehd:keyLabel="E"/>
-        <Key limehd:codes="82" limehd:keyLabel="R"/>
-        <Key limehd:codes="84" limehd:keyLabel="T"/>
-        <Key limehd:codes="89" limehd:keyLabel="Y"/>
-        <Key limehd:codes="85" limehd:keyLabel="U"/>
-        <Key limehd:codes="73" limehd:keyLabel="I"/>
-        <Key limehd:codes="79" limehd:keyLabel="O"/>
-        <Key limehd:codes="80" limehd:keyLabel="P" limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="87" limehd:keyLabel="W\nㄠ"/>
+        <Key limehd:codes="69" limehd:keyLabel="E\tㄧ\nㄝ"/>
+        <Key limehd:codes="82" limehd:keyLabel="R\tㄖ\nㄚ"/>
+        <Key limehd:codes="84" limehd:keyLabel="T\nㄊ"/>
+        <Key limehd:codes="89" limehd:keyLabel="Y\nㄚ"/>
+        <Key limehd:codes="85" limehd:keyLabel="U\nㄩ"/>
+        <Key limehd:codes="73" limehd:keyLabel="I\nㄞ"/>
+        <Key limehd:codes="79" limehd:keyLabel="O\nㄡ"/>
+        <Key limehd:codes="80" limehd:keyLabel="P\nㄆ" limehd:keyEdgeFlags="right"/>
     </Row>
     
+    
     <Row>
-        <Key limehd:codes="65" limehd:keyLabel="A" limehd:horizontalGap="5%p" 
+        <Key limehd:codes="65" limehd:keyLabel="A\tㄘ\nㄟ" limehd:horizontalGap="5%p" 
                 limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="83" limehd:keyLabel="S"/>
-        <Key limehd:codes="68" limehd:keyLabel="D"/>
-        <Key limehd:codes="70" limehd:keyLabel="F"/>
-        <Key limehd:codes="71" limehd:keyLabel="G"/>
-        <Key limehd:codes="72" limehd:keyLabel="H"/>
-        <Key limehd:codes="74" limehd:keyLabel="J"/>
-        <Key limehd:codes="75" limehd:keyLabel="K"/>
-        <Key limehd:codes="76" limehd:keyLabel="L" limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="83" limehd:keyLabel="S\t˙\nㄙ"/>
+        <Key limehd:codes="68" limehd:keyLabel="Dˊ\nㄉ"/>
+        <Key limehd:codes="70" limehd:keyLabel="F\tˇ\nㄈ"/>
+        <Key limehd:codes="71" limehd:keyLabel="G\tㄍ\nㄜ"/>
+        <Key limehd:codes="72" limehd:keyLabel="H\tㄏ\nㄛ"/>
+        <Key limehd:codes="74" limehd:keyLabel="J\tˋ\nㄐㄓ"/>
+        <Key limehd:codes="75" limehd:keyLabel="K\tㄎ\nㄤ"/>
+        <Key limehd:codes="76" limehd:keyLabel="L\tㄌ\nㄦㄥ" limehd:keyEdgeFlags="right"/>
     </Row>
+ 
     
     <Row>
         <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift" limehd:iconPreview="@drawable/sym_keyboard_feedback_shift" 
                 limehd:keyWidth="15%p" limehd:isModifier="true"
                 limehd:isSticky="true" limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="90" limehd:keyLabel="Z"/>
-        <Key limehd:codes="88" limehd:keyLabel="X"/>
-        <Key limehd:codes="67" limehd:keyLabel="C"/>
-        <Key limehd:codes="86" limehd:keyLabel="V"/>
-        <Key limehd:codes="66" limehd:keyLabel="B"/>
-        <Key limehd:codes="78" limehd:keyLabel="N"/>
-        <Key limehd:codes="77" limehd:keyLabel="M"/>
+        <Key limehd:codes="90" limehd:keyLabel="Z\nㄗ"/>
+        <Key limehd:codes="88" limehd:keyLabel="X\nㄨ"/>
+        <Key limehd:codes="67" limehd:keyLabel="C\tㄒ\nㄕ"/>
+        <Key limehd:codes="86" limehd:keyLabel="V\tㄑ\nㄔ"/>
+        <Key limehd:codes="66" limehd:keyLabel="B\nㄅ"/>
+        <Key limehd:codes="78" limehd:keyLabel="N\tㄋ\nㄣ"/>
+        <Key limehd:codes="77" limehd:keyLabel="M\tㄇ\nㄢ"/>
         <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" 
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 limehd:isRepeatable="true"/>
