--- a/trunk/limehd/res/layout/imsetting.xml
+++ b/trunk/limehd/res/layout/imsetting.xml
@@ -34,7 +34,7 @@
                     <Button android:layout_weight="1" android:id="@+id/btnSetupHs" android:layout_width="fill_parent" android:padding="5px" android:layout_height="wrap_content" android:layout_margin="5px" android:text="@string/l3_manage_hs"></Button>
                 </TableRow>
                 <TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="10pt">
-                    <Button android:layout_weight="1" android:layout_width="fill_parent" android:padding="5px" android:layout_height="wrap_content" android:layout_margin="5px" android:enabled="false"></Button>
+                    <Button android:layout_weight="1" android:id="@+id/btnSetupPinyin" android:layout_width="fill_parent" android:padding="5px" android:text="@string/l3_manage_pinyin" android:layout_height="wrap_content" android:layout_margin="5px" android:enabled="false"></Button>
                     <Button android:layout_weight="1" android:layout_width="fill_parent" android:padding="5px" android:layout_height="wrap_content" android:layout_margin="5px" android:enabled="false"></Button>
                 </TableRow>
             </TableLayout>
