--- a/trunk/limehd/res/layout/kbsetting.xml
+++ b/trunk/limehd/res/layout/kbsetting.xml
@@ -27,15 +27,19 @@
 
 			<LinearLayout android:id="@+id/extendLayout"
 				android:layout_height="wrap_content"
-				android:paddingBottom="5px" android:paddingTop="5px" android:layout_width="fill_parent">
+				android:paddingBottom="2px" android:paddingTop="2px" android:layout_width="fill_parent">
 			</LinearLayout>
 			<LinearLayout android:id="@+id/extendLayout2"
 				android:layout_height="wrap_content"
-				android:paddingBottom="5px" android:paddingTop="5px" android:layout_width="fill_parent">
+				android:paddingBottom="2px" android:paddingTop="2px" android:layout_width="fill_parent">
 			</LinearLayout>
 			<LinearLayout android:id="@+id/extendLayout3"
 				android:layout_height="wrap_content"
-				android:paddingBottom="5px" android:paddingTop="5px" android:layout_width="fill_parent">
+				android:paddingBottom="2px" android:paddingTop="2px" android:layout_width="fill_parent">
+			</LinearLayout>
+			<LinearLayout android:id="@+id/extendLayout4"
+				android:layout_height="wrap_content"
+				android:paddingBottom="2px" android:paddingTop="2px" android:layout_width="fill_parent">
 			</LinearLayout>
 			
 			<LinearLayout android:id="@+id/LinearLayout03"
